--- a/src/app/modules/hero/hero.component.scss
+++ b/src/app/modules/hero/hero.component.scss
@@ -14,15 +14,14 @@ section {
 
 .particles-container {
   position: absolute;
-  top: 12vh;
-  left: 30vw;
+  top: 30vh;
   background: transparent;
-  width: 70vw !important;
-  height: 80vh !important;
+  width: 100vw !important;
+  height: 100vh !important;
 }
 .hero-content {
   display: flex;
-  height: 100%;
+  height: 80%;
   justify-content: center;
   flex-direction: column;
   padding: 1.5rem;
@@ -48,7 +47,7 @@ section {
 div#signature-container {
   justify-content: center;
   display: flex;
-  width: 88%;
+  width: 100%;
   svg {
     will-change: transform, opacity;
   }
@@ -117,53 +116,11 @@ div#signature-container {
       transparent
     );
   }
-  /* styles for when height is more than width */
-  .particles-container {
-    top: 35vh;
-    left: 10vw;
-        width: 80vw !important;
-        height: 85vh !important;
-  }
-  div#signature-container {
-    width: 100%;
-  }
+
   .hero-content {
     top: 20%;
     height: 90%;
     justify-content: normal;
   }
-  .particles-scatter {
-      width: 100vw !important;
-    height: 100vh !important;
-    inset: 0;
- overflow: hidden;
-  }
-}
 
-@media (max-width: 1200px) {
-  div#signature-container {
-    width: 100%;
-}
-  .particles-container {
-    top: 18vh;
-    left: 35vw;
-    width: 60vw !important;
-    height: 70vh !important;
-  }
-}
-@media (orientation: portrait) {
-  div#signature-container {
-    width: 100%;
-}
-  /* Styles for taller-than-wide screens */
-  .particles-container {
-    top: 40vh;
-    left: 10vw;
-        width: 80vw !important;
-        height: 85vh !important;
-  }
-  .particles-scatter {
-      width: 100vw !important;
-    height: 100vh !important;
-  }
 }
